# qwen600_engine

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  benchmark.sh  config.h  cuda_utils.cuh  example_usage.py  export.py  main.cu  memory_manager.cuh  pyproject.toml  qwen_model.cuh  qwen_model_practice.cuh  requirements.txt  sampler.h  setup.py  static_loader.h  static_loader_practice.h  string_test.cu  tokenizer.h
docs/: BUILD_GUIDE.md  CHANGELOG.md  CODE_REVIEW_MENTOR.md  DEBUG_README.md  LEARNING_GUIDE.md  OPTIMIZATIONS.md  PHASE0_VERIFICATION.md  PROJECT_ORGANIZATION.md  PYTHON_API.md  PYTHON_INSTALLATION.md  PYTHON_QUICKSTART.md  PYTHON_WRAPPER_SUMMARY.md  README.md  TRANSFORMATION_SUMMARY.md
python/: README.md  bindings.cu
python/examples/: onnx_style.py  simple_usage.py
python/qwen_engine/: __init__.py  qwen_inference.py
python/tests/: test_installation.py
tests/: test_phase0_initialization.cu  test_phase0_initialization_practice.cu
