# pyproject.toml - Modern Python packaging configuration

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.18"
]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-cuda-engine"
version = "2.0.0"
description = "High-performance CUDA inference engine for Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "inference", "cuda", "gpu", "qwen", "transformer", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
]

dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "mypy>=0.900",
    "flake8>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/qwen600_engine"
Documentation = "https://github.com/yourusername/qwen600_engine/tree/main/docs"
Repository = "https://github.com/yourusername/qwen600_engine"
"Bug Tracker" = "https://github.com/yourusername/qwen600_engine/issues"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

